--- a/_config.yml
+++ b/_config.yml
@@ -26,54 +26,54 @@ authors:
     name: Aleks
     gplus: 110892884103962638885
     email: aleks at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/aleks.jpg
+    image: https://www.opentechschool.org/images/team/aleks.jpg
     about: is the community manager of Co.Up, the coworking space where it all began. At the OpenTechSchool she helps with organising events and as a magician with words is in charge of copy-editing.
   amelie:
     name: "Amélie Anglade"
     gplus: 113881124006632726148
     email: amelie at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/amelie.jpg
+    image: https://www.opentechschool.org/images/team/amelie.jpg
     about: is Software Engineer at frestyl and Tech Ambassador of the Berlin Geekettes. For the OpenTechSchool she does public appearances, organises workshops (best known for python) and works at the long- and short-term strategies, such as the launch of Hackership.
   angus:
     name: "Angus Gratton"
     email: angus at opentechschool dot org
-    image: http://www.opentechschool.org/images/team/angus.jpg
+    image: https://www.opentechschool.org/images/team/angus.jpg
     about: Angus is a "full stack" software developer who has worked on a variety of software, from desktop and web applications to scientific real time control systems. Co-organiser of OpenTechSchool Melbourne.
   bea:
     name: Beatrice Martini
     gplus: 117054742827125727334
     email: beatrice @ OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/beatrice.jpg
+    image: https://www.opentechschool.org/images/team/beatrice.jpg
     about: is Event Project Manager for the Open Knowledge Foundation. She contributes to the OpenTechSchool by in organising events and workshops, takes care about CI and public appereances.
   ben:
     name: "Benjamin Kampmann"
     gplus: 104898591568170720911
     email: ben at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/ben.jpg
+    image: https://www.opentechschool.org/images/team/ben.jpg
     about: is freelance Software Developer and Product Creator. Aside from helping with the organisation of workshops and events, he is part of the strategic team and author of many of the blueprints.
   diana:
     name: Diana Knodel
     gplus: 117248579384664003770
     email: diana at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/diana.jpg
+    image: https://www.opentechschool.org/images/team/diana.jpg
     about: has a background in computer science, psychology and educational research. She works as a Product Owner at XING and is engaged in the startup scence in Hamburg. She loves to share her enthusiasm about tech and coding as a volunteer at OpenTechSchool, always trying to get more girls and women into tech.
   duana:
     name: Duana Stanley
     gplus: 112209835624840039257
     email: duana at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/duana.jpg
+    image: https://www.opentechschool.org/images/team/duana.jpg
     about: is Software Developer at Soundcloud and initiator of the Learners-meetup concept. As such she is organising this and other OpenTechSchool events.
   florian:
     name: Florian Gilcher
     gplus: 103019814974030696862
     email: florian at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/florian.jpg
+    image: https://www.opentechschool.org/images/team/florian.jpg
     about: is a Software developer at asquera GmbH. He cofounded the Rust Hack and Learn and is also member of the global Rust community team.
   gio:
     name: Giorgia Sambrotta
     gplus: 112468997622326549149
     email: giorgia at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/giorgia.jpg
+    image: https://www.opentechschool.org/images/team/giorgia.jpg
     about: is Web Designer at Delivery Hero. She is an active member behind the learners meetup format and organises OTS-Workshops on conferences and other external events.
   nicolai:
     name: Nicolai von Neudeck
@@ -84,49 +84,49 @@ authors:
     name: Philipp Knodel
     gplus: 116233625155183238667
     email: phil at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/philipp.jpg
+    image: https://www.opentechschool.org/images/team/philipp.jpg
     about: has a background in political science focusing on international higher education policy. He stumbled into a Ruby on Rails course in San Francisco. And because there weren't many tech workshops for beginners in Hamburg he started the OpenTechSchool Hamburg.
   stefan:
     name: "Stefan Hoth"
     gplus: 111333123856542807695
     email: stefan at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/stefan.jpg
+    image: https://www.opentechschool.org/images/team/stefan.jpg
     about: is a freelance Web- and Mobile-Software Developer. Aside from being co-author and -host of the Android-Workshops, he helps with his huge network of contacts in the industry and works on the long-term strategy.
   steven:
     name: "Steven Farlie"
     gplus: 102640147012798270594
     email: steven at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/steven.jpg
+    image: https://www.opentechschool.org/images/team/steven.jpg
     about: is a freelance Software Developer in Melbourne, Australia. After working with the Berlin OTS-Team and developing the great Social-Coding with Github-Workshop, he is now back in Australia to set up OTS there.
   rachel:
     name: Rachel Uwa
     gplus:
     email: rachel at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/rachel.jpg
+    image: https://www.opentechschool.org/images/team/rachel.jpg
     about: Organisation wizzard and keen on everything visual and design related, from 3D over visual effect up to interactive installation, she can talk with your for hours. As such she is leading the Design-, Processing and UI endevors of the OpenTechSchool Berlin.
   robert:
     name: "Robert Lehmann"
     gplus: 102202414125507005118
     email: robert at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/robert.jpg
+    image: https://www.opentechschool.org/images/team/robert.jpg
     about: Robert is a systems engineer and Python coach.  He took OpenTechSchool from Berlin to Zurich, where he now works for Google.
   martin:
     name: "Martin Stadler"
     gplus:
     email: martin at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/martin.jpg
+    image: https://www.opentechschool.org/images/team/martin.jpg
     about: Martin is a JavaScript app and web frontend developer from Berlin. At OpenTechSchool he co-organizes the Web Frontend Co-Learning and JavaScript workshops. He is also currently chair person of the OpenTechSchool foundation (e.V.).
   tobi:
     name: "Tobias Struckmeier"
     gplus: 111067385310263861440
     email: tobi at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/tobias.jpg
+    image: https://www.opentechschool.org/images/team/tobias.jpg
     about: Tobi is a software developer living in Dortmund, Germany. At OpenTechSchool he tries to help where possible and applicable. Working on PHP and JavasScript for food and fun.
   dennis:
     name: "Dennis Wilson"
     gplus: 
     email: dennis at OpenTechSchool dot org
-    image: http://www.opentechschool.org/images/team/dennis.jpg
+    image: https://www.opentechschool.org/images/team/dennis.jpg
     about: Dennis is living in Dortmund, Germany. When he is not working on a freelance software developer, he co-organizes the OpenTechSchool Dortmund, does some open source and speaks at conferences.
 default_author: aleks
 # right now: OpenTechSchool Page, Aleks, Stefan, Amelie, Ben, Bea
@@ -140,7 +140,7 @@ fb_admins: "206143009512726,100004018402966,100000191404975,674380907,1443070876
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://blog.opentechschool.org
+production_url : https://blog.opentechschool.org
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -239,7 +239,7 @@ JB :
   # where [HELPER] is the name of the helper you are overriding.
   
 prose:
- siteurl: "http://blog.opentechschool.org"
+ siteurl: "https://blog.opentechschool.org"
  media: "assets/content"
  metadata:
   _posts:
